fix: blurry fonts on scale

--- a/app-src/scripts/edit-on-click/_edit-on-click-d.scss
+++ b/app-src/scripts/edit-on-click/_edit-on-click-d.scss
@@ -9,6 +9,8 @@
   overflow: visible;
   user-select: none;
   caret-color: #000000;
+  backface-visibility: hidden;
+  transform: translateZ(0);
 
   @include dark-theme() {
     caret-color: #ffffff;
